--- a/package.json
+++ b/package.json
@@ -1,22 +1,21 @@
 {
-    "name": "cse-motors",
-    "version": "1.0.0",
-    "description": "CSE Motors - A website for showcasing the DMC DeLorean and its upgrades",
-    "main": "server.js",
-    "scripts": {
-      "start": "node server.js",
-      "dev": "nodemon server.js"
-    },
-    "dependencies": {
-      "express": "^4.18.2",
-      "dotenv": "^16.3.1"
-    },
-    "devDependencies": {
-      "nodemon": "^3.0.1"
-    },
-    "engines": {
-      "node": ">=16.0.0"
-    },
-    "license": "MIT"
-  }
-  
+  "name": "cse-motors",
+  "version": "1.0.0",
+  "description": "CSE Motors - A website for showcasing the DMC DeLorean and its upgrades",
+  "main": "app.js",
+  "scripts": {
+    "start": "node app.js",
+    "dev": "nodemon app.js"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "dotenv": "^16.3.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
+  },
+  "engines": {
+    "node": ">=16.0.0"
+  },
+  "license": "MIT"
+}
